2009-04-30  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Preparse for pre-releasing.

	* src/bmltest_info.c:
	  Fix wrong warning.

2009-04-27  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* README.libfst:
	* README.local:
	  We don't have the fst wrapper in anymore.

2009-04-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More todos

	* dllwrapper/wine/ldt_keeper.c:
	  Clang checker fix.

	* shave-libtool.in:
	  Fix the build.

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/MachineInterface.h:
	  Comments.

2009-03-13  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Zero memory for new. Makes valgrind much happier.

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Free more, leak less.

2009-02-25  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	  Indent.

2009-02-25  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	  Update shave.

2009-02-20  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	* m4/shave.m4 (added):
	* shave.in (added):
	* shave-libtool.in (added):
	  Have a less verbose build.

2009-02-18  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* configure.ac:
	  Give a hint if user installs into a non know location.

2009-01-30  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	* tests/testmachine.sh:
	  Fix the audio amplitude ranges.

2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Add results.

	* src/bmltest_process.c:
	  Set a min tracks if needed. Fix setting voice params. Don't call work with 0
	  length.

	* tests/testmachine.sh:
	  Small parsing and output fix.
	  

2009-01-27  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	* tests/testmachine.sh:
	  Extend the machine test script to actually generate or process audio.
